PZDC async problems, date from view problems

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=mobileStoreDb.db;"
+    "DefaultConnection": "Data Source=StoreDb.db;"
   },
   "Logging": {
     "LogLevel": {
