--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=StoreDb.db;"
+    "DefaultConnection": "Data Source=LibDb.db;"
   },
   "Logging": {
     "LogLevel": {
