EveryThingIsFine, just add bookFiles

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LibDb.db;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=LibDb;UserId=postgres;Password=12345;"
   },
   "Logging": {
     "LogLevel": {
